push up work true

--- a/AL Pose Estimation.ipynb
+++ b/AL Pose Estimation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6512,7 +6512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6532,7 +6532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6543,7 +6543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -6753,7 +6753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6808,7 +6808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -6825,9 +6825,7 @@
       "Push-up:  8\n",
       "Push-up:  9\n",
       "Push-up:  10\n",
-      "Push-up:  11\n",
-      "Push-up:  12\n",
-      "Push-up:  13\n"
+      "Push-up:  11\n"
      ]
     }
    ],
@@ -6852,7 +6850,7 @@
     "        # Recolor back to BGR\n",
     "        image.flags.writeable = True\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
-    "        \n",
+    "         \n",
     "        # Extract landmarks\n",
     "        try:\n",
     "            landmarks = results.pose_landmarks.landmark\n",
@@ -6875,8 +6873,8 @@
     "            cv2.putText(image, \"Neck: {}\".format(neck_angle), (15,140),\n",
     "                        cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 2, cv2.LINE_AA )\n",
     "            avg_arm_angle = (left_arm_angle + right_arm_angle)//2\n",
-    "            cv2.putText(image, \"Push Up: {}\".format(counter), (500,25),\n",
-    "                        cv2.FONT_HERSHEY_SIMPLEX, 1, (100, 149, 237), 2, cv2.LINE_AA )\n",
+    "            cv2.putText(image, \"Push Up: {}\".format(str(landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER].visibility)), (480,25),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.75, (100, 149, 237), 2, cv2.LINE_AA )\n",
     "            \n",
     "            if status == 0:\n",
     "                if avg_arm_angle < 70:\n",
